--- a/app-muiscas/www/css/index.css
+++ b/app-muiscas/www/css/index.css
@@ -71,6 +71,20 @@
 	width: 100%;
 	height: 50px;
 	float: right;
+	background-color: green;
 	
 
 }
+
+
+
+#contenido { border-style: dotted;
+			width: 100%;
+			max-width: 800px;
+			margin: auto;
+			min-height:400px;
+    		height:100%;
+			background-color: red;
+			color: white;
+
+
