--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -1,10 +1,9 @@
-#cabecera { border-style: dotted;
+.cabecera { border-style: dotted;
 			width: 100%;
 			max-width: 800px;
 			margin: auto;
 }
-
-#logo{float: left;
+.logo{float: left;
 		margin: 10px 10px 10px 10px;
 
 }
@@ -21,7 +20,7 @@
 
 
 
-#cuerpo { border-style: dotted;
+.cuerpo { border-style: dotted;
 			width: 100%;
 			max-width: 800px;
 			margin: auto;
@@ -33,36 +32,25 @@
 			
 
 }
-
-
-.botonesderecho{
-	border-style: dotted;
-	border-color: red;
-	width: 45%;
-	height: 110px;
-	float: left;
-	
-
+.botones{
+    width: 45%;
+    height:110px;
+}
+.derechos{
+    border-style: dotted;
+    border-color: red;
+    float: left;
+}
+.izquierdos{
+    border-style: dotted;
+    border-color: green;
+    float: right;
 }
 
-.botonesizquierdo{
+.centros{
 	border-style: dotted;
 	border-color: green;
-	width: 45%;
-	height: 110px;
 	float: right;
-	
-
-}
-
-.botoncentro{
-	border-style: dotted;
-	border-color: green;
-	width: 100%;
-	height: 110px;
-	float: right;
-	
-
 }
 
 .pie{
