--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -19,24 +19,20 @@
 			
 }
 
-
-
-
 .cuerpo { border-style: dotted;
 			width: 100%;
-			max-width: 800px;
-			margin: auto;
-			min-height:400px;
     		height:100%;
+			margin: auto;
 			margin-top: 5px;
 			background-color: black;
 			color: white;
+			position:absolute;
 			
 
 }
 .botones{
     width: 45%;
-    height:110px;
+    height:24%;
 }
 .derechos{
     border-style: dotted;
@@ -56,21 +52,18 @@
 }
 
 .pie{
-	border-style: dotted;
-	border-color: purple;
 	width: 100%;
-	height: 50px;
-	float: right;
-	background-color: green;
+	height: 23%;
+	background: green;
+	border-top: 2px solid #000;
+	position: absolute;
+	bottom: 0;
 	
 
 }
 
-
-
 #contenido { border-style: dotted;
 			width: 100%;
-			max-width: 800px;
 			margin: auto;
 			min-height:400px;
     		height:100%;
