maquetando seccion numeros 2.0

--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -24,6 +24,7 @@
 			color: white;
 			position:absolute;
 			
+			
 
 }
 .botones{
@@ -76,6 +77,6 @@
    			border-style:solid;
 			width: 100%;
 			margin: auto;
-			background-color: yellow;
+			background-color: #D1D581;
 
  	}
