--- a/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
+++ b/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
@@ -20,23 +20,40 @@ body{
 			
 }
 
-.cuerpo { border-style: dotted;
-			width: 100%;
+.cuerpo { width: 100%;
     		height:100%;
-			margin: auto;
 			margin-top: 5px;
 			color: white;
 			position:absolute;
-				
+			
+	}		
+
+.chat {
+		
+		
+		width: 100%;
+		margin: auto;
+    	
 
 }
+        
+.izquierdo{float: left;
+			width: 80%;
+        }
+
+
+.derecho{ float: right;
+			width: 80%;
+        }
+
+
 
 .pie{
 	width: 100%;
 	height: 5%;
 	border-top: 2px solid #000;
 	position: absolute;
-	bottom: 16%;
+	bottom: 0;
 	font-size: 0.8em;
 	text-align: center;
 	background-color: black;
@@ -53,4 +70,5 @@ body{
 			color: white;
 
 }
- 
+
+
