--- a/app-muiscas/www/css/indexh.css
+++ b/app-muiscas/www/css/indexh.css
@@ -1,5 +1,4 @@
 .cabecera { 
-    border-style: dotted;
     width: 100%;
     height:9vw;
     margin: auto;
@@ -23,18 +22,16 @@
     border-style: dotted;
     width: 100%;
     height:100%;
-    background-color: black;
     color: white;
     position:absolute;
     left:0;
     top:9.1vw;
 }
 .botones{
-    width: 45%;
+    width:45%;
     height:20%;
 }
 .derechos{
-    border-style: dotted;
     border-color: red;
     float: left;
 }
@@ -51,21 +48,6 @@
     top:50%;
     transform: translate(-50%,-50%);
 }
-.pie{
-    border-style: dotted;
-    border-color: purple;
-    width: 100%;
-    height: 50px;
-    float: right;
-    background-color: green;
+.icono{
+    width:15vw;
 }
-#contenido { border-style: dotted;
-			width: 100%;
-			max-width: 800px;
-			margin: auto;
-			min-height:400px;
-    		height:100%;
-			background-color: red;
-			color: white;
-
-
