--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -1,34 +1,27 @@
-.cabecera { border-style: dotted;
-			width: 100%;
-			
-			margin: auto;
+.cabecera { 
+    border-style: dotted;
+    width: 100%;
+    margin: auto;
 }
-.logo{	width:10%;
-   	 	float: left;
-  		margin:1.5%;
+.logo{	
+    width:10%;
+    float: left;
+    margin:1.5%;
 }
-
-
-
-
 .titulos { 
-			font-family:"helvetica";
-    		font-size: 6vw;
-   			line-height: 0;
-
-			
+    font-family:"helvetica";
+    font-size: 6vw;
+    line-height: 0;
 }
 
-.cuerpo { border-style: dotted;
-			width: 100%;
-    		height:100%;
-			margin: auto;
-			margin-top: 5px;
-			background-color: black;
-			color: white;
-			position:absolute;
-			
-
+.cuerpo { 
+    border-style: dotted;
+    width: 100%;
+    height:100%;
+    margin: auto;
+    margin-top: 5px;
+    color: white;
+    position:absolute;
 }
 .botones{
     width: 45%;
@@ -52,28 +45,3 @@
 	bottom: 19%;
 	width: 100%;
 }
-
-.pie{
-	width: 100%;
-	height: 17%;
-	background: black;
-	border-top: 2px solid #000;
-	position: absolute;
-	bottom: 0;
-	font-size: 0.8em;
-	text-align: center;
-
-
-	
-
-}
-
-#contenido { border-style: dotted;
-			width: 100%;
-			margin: auto;
-			min-height:400px;
-    		height:100%;
-			background-color: red;
-			color: white;
-
-
