--- a/app-muiscas/www/css/indexh.css
+++ b/app-muiscas/www/css/indexh.css
@@ -1,53 +1,62 @@
+*{
+    margin:0;
+    padding:0;
+}
+body{
+    background-color: pink;
+}
 .cabecera { 
     width: 100%;
     height:9vw;
     margin: auto;
     background-color:red;
-    position:absolute;
+    position:fixed;
     left:0;
     top:0;
+    z-index:99;
 }
-
 .logo{
     width:5%;
     float: left;
     margin:1.5%;
 }
 .titulos { 
+    font-weight:bolder;
     font-family:"helvetica";
     font-size: 4vw;
-    line-height: 0;
+    text-align:center;
+    padding-top:2%;
 }
 .cuerpo {
-    border-style: dotted;
     width: 100%;
-    height:100%;
-    color: white;
     position:absolute;
     left:0;
-    top:9.1vw;
+    top:9vw;
+    overflow:hidden;
+    
 }
 .botones{
-    width:45%;
-    height:20%;
+    padding:2% 7.5% 2% 7.5%;
 }
 .derechos{
-    border-color: red;
     float: left;
 }
 .izquierdos{
-    border-style: dotted;
-    border-color: green;
     float: right;
 }
 .centros{
-    border-style: dotted;
-    border-color: green;
-    position:relative;
-    left: 50%;
-    top:50%;
-    transform: translate(-50%,-50%);
+    position:absolute;
+    left: 32.5%;
+    top:25%;
 }
 .icono{
-    width:15vw;
+    width:20vw;
+}
+.textoicono{
+    text-align:center;
+    text-decoration:none;
+    font-size:2vw;
+}
+.imgcentro{
+    padding-right:60%;
 }
