--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -5,6 +5,7 @@ body{
 .cabecera { border-style: dotted;
 			width: 100%;
 			margin: auto;
+                        background-color:#95C11E;
 }
 .logo{	width:10%;
    	 	float: left;
