chat bombas en css saludos

--- a/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
+++ b/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
@@ -20,31 +20,14 @@ body{
 			
 }
 
-.cuerpo { width: 100%;
+.cuerpo { 	width: 95%;
     		height:100%;
-			margin-top: 5px;
-			color: white;
-			position:absolute;
-			
+			margin:auto;
+			color: black;
+						
 	}		
 
-.chat {
-		
-		
-		width: 100%;
-		margin: auto;
-    	
-
-}
-        
-.izquierdo{float: left;
-			width: 80%;
-        }
-
-
-.derecho{ float: right;
-			width: 80%;
-        }
+ 	
 
 
 
@@ -58,17 +41,100 @@ body{
 	text-align: center;
 	background-color: black;
 
+}
+
+
+
+
+.bombaiz 
+{
+	position: relative;
+	width: 90%;
+	padding: 0px;
+	background: #EEFFFF;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	border: #8C6E7F solid 2px;
+	float: right;
+	text-indent:10%;
+}
+
+.bombaiz:before 
+{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 8px 15px 8px 0;
+	border-color: transparent #EEFFFF;
+	display: block;
+	width: 0;
+	z-index: 1;
+	margin-top: -8px;
+	left: -15px;
+	top: 40%;
+}
+
+.bombaiz:after 
+{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 9px 16px 9px 0;
+	border-color: transparent #8C6E7F;
+	display: block;
+	width: 0;
+	z-index: 0;
+	margin-top: -9px;
+	left: -18px;
+	top: 40%;
+}
+
+
+
+
+.bombader
+{
+	position: relative;
+	width: 90%;
+	float: left;
+	padding: 0px;
+	background: #9DFF89;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	border: #8C6E7F solid 2px;
+	text-align: right;
 
 }
 
-#contenido { border-style: dotted;
-			width: 100%;
-			margin: auto;
-			min-height:400px;
-    		height:100%;
-			background-color: red;
-			color: white;
-
+.bombader:before 
+{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 8px 0 8px 15px;
+	border-color: transparent #9DFF89;
+	display: block;
+	width: 0;
+	z-index: 1;
+	margin-top: -8px;
+	right: -15px;
+	top: 40%;
 }
 
+.bombader:after 
+{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 9px 0 9px 16px;
+	border-color: transparent #8C6E7F;
+	display: block;
+	width: 0;
+	z-index: 0;
+	margin-top: -9px;
+	right: -18px;
+	top: 40%;
+}
 
