--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -15,33 +15,40 @@
 }
 
 .cuerpo { 
-    border-style: dotted;
     width: 100%;
     height:100%;
-    margin: auto;
-    margin-top: 5px;
-    color: white;
-    position:absolute;
+    background-color: #FDDD04;
+
 }
-.botones{
-    width: 45%;
-    height:25%;
+.botones{ width: 50%;
+   
+    
 }
 .derechos{
-    border-style: dotted;
-    border-color: red;
+    
     float: left;
 }
 .izquierdos{
-    border-style: dotted;
-    border-color: green;
+    
     float: right;
 }
 
 .centros{
-	border-style: dotted;
-	border-color: blue;
-	position: absolute;
-	bottom: 19%;
-	width: 100%;
+    width: 100%;
+    text-align: center;
+    margin:0 auto;
+    
+	}
+
+.centros img {width: 50%;
+              vertical-align:middle;
+    }    
+
+.icono{
+    width:100%;
+    margin: auto;
+
+}
+.textoicono{
+    text-align:center;
 }
