--- a/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
+++ b/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
@@ -45,12 +45,16 @@ body{
 }
 
 
+.chat{ margin: 1% 1% 1% 1%;
+		
 
+}
 
 .bombaiz 
 {
 	position: relative;
 	width: 90%;
+	height: 80%;
 	padding: 0px;
 	background: #EEFFFF;
 	-webkit-border-radius: 10px;
@@ -59,6 +63,7 @@ body{
 	border: #8C6E7F solid 2px;
 	float: right;
 	text-indent:10%;
+	font-size: 4vh;
 }
 
 .bombaiz:before 
@@ -98,6 +103,7 @@ body{
 {
 	position: relative;
 	width: 90%;
+	height: 80%;
 	float: left;
 	padding: 0px;
 	background: #9DFF89;
@@ -106,6 +112,7 @@ body{
 	border-radius: 10px;
 	border: #8C6E7F solid 2px;
 	text-align: right;
+	font-size: 4vh;
 
 }
 
