--- a/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
+++ b/app-muiscas/www/SaludosyPresentacion/css/saludosxv.css
@@ -2,122 +2,100 @@ body{
 	margin:0;
 	padding: 0;
 }
-.cabecera { border-style: dotted;
-            width: 100%;
-            margin: auto;
-            background-color:#1AB1E1;
+.cabecera { 
+    border-style: dotted;
+    width: 100%;
+    margin: auto;
+    background-color:#1AB1E1;
 }
-.logo{	width:7.5%;
-   	 	float: left;
-  		margin:2%;
+.logo{
+    width:7.5%;
+    float: left;
+    margin:2%;
 }
 
 
 .titulo{ 
-			font-family:"helvetica";
-    		font-size: 6vw;
-   			line-height: 0;
-
-			
+    font-family:"helvetica";
+    font-size: 6vw;
+    line-height: 0;			
 }
 
-.cuerpo { 	width: 95%;
-    		height:100%;
-			margin:auto;
-			color: black;
-						
-	}		
-
- 	
-
-
-
+.cuerpo { 	
+    width: 95%;
+    height:100%;
+    margin:auto;
+    color: black;
+}
 .pie{
-	width: 100%;
-	height: 5%;
-	border-top: 2px solid #000;
-	position: absolute;
-	bottom: 0;
-	font-size: 0.8em;
-	text-align: center;
-	background-color: black;
-
+    width: 100%;
+    height: 5%;
+    border-top: 2px solid #000;
+    position: absolute;
+    bottom: 0;
+    font-size: 0.8em;
+    text-align: center;
+    background-color: black;
 }
-
-
-.chat{ margin: 1% 1% 1% 1%;
-		
-
+.chat{ 
+    margin: 1% 1% 1% 1%;
 }
-
-.bombaiz 
-{
-	position: relative;
-	width: 90%;
-	height: 80%;
-	padding: 0px;
-	background: #EEFFFF;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	border: #8C6E7F solid 2px;
-	float: right;
-	text-indent:10%;
-	font-size: 4vh;
+/* Su código */
+.bombaiz {
+    position: relative;
+    width: 90%;
+    height: 80%;
+    padding: 0px;
+    background: #EEFFFF;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: #8C6E7F solid 2px;
+    float: right;
+    text-indent:10%;
+    font-size: 4vh;
 }
-
-.bombaiz:before 
-{
-	content: '';
-	position: absolute;
-	border-style: solid;
-	border-width: 8px 15px 8px 0;
-	border-color: transparent #EEFFFF;
-	display: block;
-	width: 0;
-	z-index: 1;
-	margin-top: -8px;
-	left: -15px;
-	top: 40%;
+.bombaiz:before {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 8px 15px 8px 0;
+    border-color: transparent #EEFFFF;
+    display: block;
+    width: 0;
+    z-index: 1;
+    margin-top: -8px;
+    left: -15px;
+    top: 40%;
 }
-
-.bombaiz:after 
-{
-	content: '';
-	position: absolute;
-	border-style: solid;
-	border-width: 9px 16px 9px 0;
-	border-color: transparent #8C6E7F;
-	display: block;
-	width: 0;
-	z-index: 0;
-	margin-top: -9px;
-	left: -18px;
-	top: 40%;
+.bombaiz:after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 9px 16px 9px 0;
+    border-color: transparent #8C6E7F;
+    display: block;
+    width: 0;
+    z-index: 0;
+    margin-top: -9px;
+    left: -18px;
+    top: 40%;
 }
-
-
-
-
-.bombader
-{
-	position: relative;
-	width: 90%;
-	height: 80%;
-	float: left;
-	padding: 0px;
-	background: #9DFF89;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	border: #8C6E7F solid 2px;
-	text-align: right;
-	font-size: 4vh;
-
+.bombader{
+    position: relative;
+    width: 90%;
+    height: 80%;
+    float: left;
+    padding: 0px;
+    background: #9DFF89;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: #8C6E7F solid 2px;
+    text-align: right;
+    font-size: 4vh;
 }
-
-.bombader:before 
-{
+.bombader:before {
 	content: '';
 	position: absolute;
 	border-style: solid;
@@ -130,9 +108,7 @@ body{
 	right: -15px;
 	top: 40%;
 }
-
-.bombader:after 
-{
+.bombader:after FFFF{
 	content: '';
 	position: absolute;
 	border-style: solid;
@@ -145,4 +121,42 @@ body{
 	right: -18px;
 	top: 40%;
 }
-
+/* fin de su código, comienzo del mio */
+.contizquierda, .contderecha{
+    display:flex;
+    margin:7.5% 2% 7.5% 2%;
+}
+.contderecha{
+    justify-content:flex-end;
+}
+.caras, .burbuja, .texto, .imgaudio{
+    display:inline-flex;
+    margin:0.5%;
+    padding:0.5%;
+}
+.caras{
+    width:15%;
+}
+.burbuja{
+    border-radius: 10px 10px;
+    position:relative;
+    right:0;
+}
+.izquierda{
+    background-color:#ffb380;
+    border: 0.1em solid #ffb380;
+}
+.derecha{
+    background-color:#99cc33;
+    border: 0.1em solid #99cc33;
+}
+.contexto{
+    width:100%;
+    margin-top:3%;
+}
+.texto{
+    width:99%;
+}
+.imgaudio{
+    width:20%;
+}
