--- a/app-muiscas/www/css/menu.css
+++ b/app-muiscas/www/css/menu.css
@@ -10,7 +10,7 @@
     margin-top:-20px;
 }
 .titulomenu{
-    color:#ffff;
+    color:#ffffff;
     font-weight: bold;
     font-size:1.5em;
     display:block;
