--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -1,6 +1,10 @@
 body{
 	margin:0;
+	
+
 }
+
+
 .cabecera { border-style: dotted;
 			width: 100%;
 			margin: auto;
@@ -23,13 +27,13 @@ body{
 
 .cuerpo { border-style: dotted;
 			width: 100%;
-                        height:80%;
+            height:80%;
 			margin: auto;
 			margin-top: 5px;
 			color: white;
 			position:absolute;
-                        top:20%;
-			
+            top:20%;
+			background-color: red;
 			
 
 }
