--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -1,7 +1,18 @@
+body{
+    background-color: #FDDD04;
+
+}
+
 .cabecera { 
-    border-style: dotted;
     width: 100%;
     margin: auto;
+    background-color:black;
+    position:fixed;
+    left:0;
+    top:0;
+    z-index:99;
+    color: white;
+    text-align: center;
 }
 .logo{	
     width:10%;
@@ -16,8 +27,9 @@
 
 .cuerpo { 
     width: 100%;
-    height:100%;
-    background-color: #FDDD04;
+    margin-top: 13%;
+
+
 
 }
 .botones{ width: 50%;
