--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -1,40 +1,43 @@
 body{
-	margin:0;
-	
+ 
 
 }
 
-
-.cabecera {
-    border-style: dotted;
+.cabecera { 
     width: 100%;
     margin: auto;
-         background-color:#95C11E;
-         position:fixed;
-   z-index:90;	
+    background-color:black;
+    position:fixed;
+    left:0;
+    top:0;
+    z-index:99;
+    color: white;
+    text-align: center;
 }
-.logo{	width:10%;
-   	 	float: left;
-  			margin:1.5%;
+.logo{	
+    width:10%;
+    float: left;
+    margin:1.5%;
 }
-
-
-.titulo { 
-			font-family:"helvetica";
-    		font-size: 6vw;
-   		line-height: 0;
-
-			
-}
-
-.cuerpo { 
-			width: 100%;
-         position:absolute;
-         top:9%;
+.titulos { 
+    font-family:"helvetica";
+    font-size: 6vw;
+    line-height: 0;
 }
 
-.imagen {width: 100%;
-			display:block;
+.cuerpo{width: 100%;    
+        height: 500px;
+        background-color: red;
+}
+
+
+
+#boton1{
+    background-image:url("../img/horizontal1.png");   
+   width: 100%;
+    height: 50%;
+    background-repeat: no-repeat;
+   background-position: bottom right;
 
 }
 
