choa versión horizontal

--- a/app-muiscas/www/saludos/css/choaxv.css
+++ b/app-muiscas/www/saludos/css/choaxv.css
@@ -49,7 +49,6 @@ body{
 }
 .mediodia{
     position: absolute;
-    top:4%;
     left:50%;
     transform: translate(-50%);
 }
@@ -70,12 +69,12 @@ body{
     transform: translate(-50%);    
 }
 .contsaludos{
-    width: 92%;
+    width:95%;
     height: 15%;
     border: solid 1vh black;
     overflow:auto;
     position:absolute;
-    top:82%;
+    top:83%;
     left:50%;
     transform: translate(-50%);
 }
@@ -95,7 +94,7 @@ body{
     border-radius: 150vw 150vw;
     overflow:auto;
     position:fixed;
-    top:30%;
+    top:30vh;
     left:50%;
     transform: translate(-50%);
     z-index:80;
