--- a/app-muiscas/www/saludos/css/choaxh.css
+++ b/app-muiscas/www/saludos/css/choaxh.css
@@ -11,35 +11,105 @@ body{
     z-index:99;
 }
 .atras{
-    width:5vw;
+    width:5vh;
     height:100%;
     float: left;
     margin:1%;
 }
 .logopersona{
-    width:8vw;
+    width:8vh;
     float: left;
     margin:1% 1% 1% -1%;
 }
 .titulo{
     font-family:"helvetica";
     line-height:0;
-    font-size: 4vw;
+    font-size: 5vh;
 }
 .subtitulo{
     font-family:"helvetica";
-    font-size: 2.5vw;
+    font-size: 3.5vh;
     line-height:0;
     text-align: right;
     margin-right: 2%;
 }
 .cuerpo{
+    width: 62%;
+    height: 83%;
     position:absolute;
-    top:15%;
+    top:16%;
+    left:37.5%;
 }
 .tamano{
     width:15%;
+    transition:all 2s;
+}
+.zoom{
+    width:20%;
+    transition:all 2s;
 }
 .mediodia{
+    position: absolute;
     left:50%;
+    transform: translate(-50%);
+}
+.atardecer{
+    position: absolute;
+    top:40%;
+    left: 
+}
+.amanecer{
+    position: absolute;
+    top:40%;
+    right: 1%;
+}
+.medianoche{
+    position: absolute;
+    top: 76%;
+    left:50%;
+    transform: translate(-50%);    
+}
+.contsaludos{
+    width:35%;
+    height: 80%;
+    border: solid 1vh black;
+    overflow:auto;
+    position:absolute;
+    top:17%;
+    left:0.5%;
+}
+.normal{
+    width:100%;
+    border: 0.5vh solid #000;
+}
+.normal th, .normal td {
+    font-size: 3vw;
+    border: 0.7vw solid #000;
+    width:100%;
+}
+.explicacion{
+    width:35%;
+    height:40%;
+    border: 0.7vw solid #000;
+    border-radius: 150vw 150vw;
+    overflow:auto;
+    position:fixed;
+    top:36.5vh;
+    left:50%;
+    z-index:80;
+}
+.saludo{
+    color:red;
+    font-size:7vh;
+    font-family:"helvetica";
+    text-align:center;
+    margin:9% 3% 3% 3%;
+    line-height:0.9;
+}
+.textoexplicacion{
+    font-size:4vh;
+    font-family:"helvetica";
+    text-align:center;
+    margin:3% 8% 5% 5%;
+    line-height:1;
 }
