--- a/app-muiscas/www/saludos/css/saludosxv.css
+++ b/app-muiscas/www/saludos/css/saludosxv.css
@@ -1,7 +1,9 @@
 body{
     margin:0;
     padding: 0;
+    overflow: hidden;
 }
+
 .cabecera { 
     width: 100%;
     background-color:#1AB1E1;
@@ -20,13 +22,30 @@ body{
     font-size: 6vw;
     line-height: 0;			
 }
-.cuerpo{ 	
+.cuerpo{
+    background-color:#ffffff;
     width: 100%;
+    height:94%;
+    overflow:auto;
     position:absolute;
     top:6%;
+    height: 93.5%;
+    z-index:80;
 }
-.chat{ 
-    margin: 1% 1% 1% 1%;
+.ejercicio{
+    width:100%;
+    height:92%;
+    background-color:pink;
+    position:absolute;
+    top:8%;
+}
+.arriba{
+    top:-200%;
+    transition:all 1s;
+}
+.abajo{
+    top:300%;
+    transition:all 1s;
 }
 .contizquierda, .contderecha{
     display:flex;
@@ -69,4 +88,27 @@ body{
 }
 .imgaudio{
     width:20%;
+}
+.cambio{
+    width: 70%;
+    background-color:#3f51b5;
+    border: 0.1em solid #3f51b5;
+    box-shadow: 1.5vw 0.5vw 2vw #999;
+    position: absolute;
+    left:50%;
+    transform: translate(-50%)
+}
+.cambioejer{
+    color:white;
+    text-align: center;
+    font-family: "helvetica";
+    font-size: 6vw;
+    font-weight: 800;
+    line-height: 0;
+}
+.enunciado{
+    color:white;
+    font-family: "helvetica";
+    font-size: 6vw;
+    
 }
