--- a/app-muiscas/www/saludos/css/saludosxh.css
+++ b/app-muiscas/www/saludos/css/saludosxh.css
@@ -30,8 +30,8 @@ body{
 }
 .ejercicio{
     width:100%;
-    height: 84%;
-    background-color:pink;
+    height: 70%;
+    overflow: auto;
     position:absolute;
     top:15%;
 }
@@ -98,4 +98,29 @@ body{
     font-size: 6vh;
     font-weight: 800;
     line-height: 0;
+}
+.subministrar{
+    background-color: white;
+    border-top: 1.5vh solid #9e9e9e;
+    display:flex;
+    width:100%;
+    padding:1%;
+    position:fixed;
+    bottom:0;
+    z-index: 79;
+} 
+.inputexto{
+    background-color: #f5f5f5;
+    font-size: 5vh;
+    display:inline-flex;
+    border:none;
+    border-bottom: 1.5vh solid #9e9e9e;
+    width:90%; 
+    margin: 0;
+}
+.enter{
+    display:inline-flex;
+    font-size:11vh;
+    font-weight: 900;
+    margin:0% 1% 0% 1%;
 }
