--- a/app-muiscas/www/saludos/css/saludosxv.css
+++ b/app-muiscas/www/saludos/css/saludosxv.css
@@ -34,8 +34,8 @@ body{
 }
 .ejercicio{
     width:100%;
-    height:92%;
-    background-color:pink;
+    height:85%;
+    overflow: auto;
     position:absolute;
     top:8%;
 }
@@ -82,7 +82,7 @@ body{
 }
 .texto{
     font-family: "helvetica";
-    font-size:4vw;
+    font-size:5vw;
     width:90%;
     color:#fffff;
 }
@@ -109,6 +109,43 @@ body{
 .enunciado{
     color:white;
     font-family: "helvetica";
+    font-size: 5.5vw;
+    margin:4%;
+}
+.opciones{
+    width:44%;
+    color:white;
+    font-family: "helvetica";
     font-size: 6vw;
-    
+    font-weight: 800;
+    float:left;
+    margin: 3%;
+}
+.subministrar{
+    border-top: 1vw solid #9e9e9e;
+    display:none;
+    background-color: white;
+    width:100%;
+    padding:1%;
+    position:fixed;
+    bottom:0;
+    z-index: 79;
+} 
+.inputexto{
+    background-color: #f5f5f5;
+    font-size: 5vw;
+    display:inline-flex;
+    border:none;
+    border-bottom: 1vw solid #9e9e9e;
+    width:90%; 
+    margin: 0;
+}
+.enter{
+    display:inline-flex;
+    font-size:9vw;
+    font-weight: 900;
+    margin:0% 1% 0% 1%;
+}
+.invisible{
+    display:none;
 }
