--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -145,3 +145,15 @@ left:25%;
 top: 46%;
 transition: all 3s;
 }
+.icono{
+    width: 7%;
+    position: absolute;
+}
+.izquierda{
+    bottom: 2%;
+    left: 2%;
+}
+.derecha{
+    bottom: 2%;
+    right: 2%;
+}
