--- a/app-muiscas/www/saludos/css/saludosxh.css
+++ b/app-muiscas/www/saludos/css/saludosxh.css
@@ -102,7 +102,7 @@ body{
 .subministrar{
     background-color: white;
     border-top: 1.5vh solid #9e9e9e;
-    display:flex;
+    display:none;
     width:100%;
     padding:1%;
     position:fixed;
