ok unificando menus sin mercado y revisando vinculos adicionando al css control sobre imagenes y dejando solo archivos css en carpeta css

--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -31,6 +31,27 @@
     width:100%;
     display:block
 }
+
+.horizontal img{
+    width:100%;
+    display:block
+}
+
+
+
+
 .vertical{
     display: none;
 }
+
+
+.numeros{
+    width:100%;
+}
+
+.numeros img{
+    width:30%;
+}
+
+
+
