--- a/app-muiscas/www/numeros/css/numerosxh.css
+++ b/app-muiscas/www/numeros/css/numerosxh.css
@@ -1,4 +1,7 @@
-
+body{
+    margin:0;
+    padding: 0;
+}
 .cabecera { 
     width: 100%;
     height:9vw;
@@ -36,5 +39,27 @@
     margin: auto;
 }
 .horizontal{
+    display: none;
+}
+.montrasnumeros{
+    background-color: red;
+    position:fixed;
+    width: 100%;
+    height:35vh;
+}
+#h1js{
+    text-align: center;
+    font-size:12vh;
+    font-family: "helvetica";
+}
+.cuerponumeros{
+    overflow:auto;
+    position: fixed;
+    top:41vh;
+}
+.imgnumeros{
+    width:19%;
+}
+.noseve{
     display: none;
 }
