--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -1,4 +1,8 @@
-.cabecera { 
+body{
+    margin:0;
+    padding: 0;
+}
+.cabecera {
     width: 100%;
     background-color:red;
     position:fixed;
@@ -7,14 +11,13 @@
     z-index:99;
     color: white;
     text-align: center;
-    
 }
-.logo{	
+.logo{
     width:10%;
     float: left;
     margin:1.5%;
 }
-.titulos { 
+.titulos {
     font-family:"helvetica";
     font-size: 6vw;
     line-height: 0;
@@ -31,27 +34,34 @@
     width:100%;
     display:block
 }
-
 .horizontal img{
     width:100%;
     display:block
 }
-
-
-
-
 .vertical{
     display: none;
 }
-
-
-.numeros{
-    width:100%;
+.montrasnumeros{
+    background-color: red;
+    position:fixed;
+    width: 100%;
+    height:15vh;
 }
-
-.numeros img{
-    width:30%;
+#h1js{
+    text-align: center;
+    font-size:9.5vw;
+    font-family: "helvetica";
 }
-
+.cuerponumeros{
+    overflow:auto;
+    position: fixed;
+    top:15.2vh;
+}
+.imgnumeros{
+    width:32%;
+}
+.noseve{
+    opacity:0;
+}
 
 
