--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -1,4 +1,4 @@
-body{
+﻿body{
     margin:0;
     padding: 0;
 }
@@ -41,7 +41,7 @@ body{
 .vertical{
     display: none;
 }
-.montrasnumeros{
+.mostrarnumeros{
     background-color: red;
     position:fixed;
     width: 100%;
