--- a/app-muiscas/www/numeros/css/numerosxh.css
+++ b/app-muiscas/www/numeros/css/numerosxh.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding: 0;
 }
-.cabecera { 
+.cabecera {
     width: 100%;
     height:9vw;
     margin: auto;
@@ -17,7 +17,7 @@ body{
     float: left;
     margin:1.5%;
 }
-.titulos { 
+.titulos {
     font-weight:bolder;
     font-family:"helvetica";
     font-size: 4vw;
@@ -25,7 +25,7 @@ body{
     padding-top:2%;
 }
 .cuerpo{
-    width: 100%; 
+    width: 100%;
     position: absolute;
     top:9.4vw;
     left:0.5vw;
@@ -41,8 +41,9 @@ body{
 .horizontal{
     display: none;
 }
-.montrasnumeros{
+.mostrarnumeros{
     background-color: red;
+    box-shadow: 0 2.5vh 1vh -1vh gray;
     position:fixed;
     width: 100%;
     height:35vh;
