--- a/app-muiscas/www/numeros/css/numerosxh.css
+++ b/app-muiscas/www/numeros/css/numerosxh.css
@@ -48,6 +48,14 @@ body{
     width: 100%;
     height:35vh;
 }
+.atrasnumeros{
+    width: 10%;
+    position: fixed;
+    top:5vh;
+    left: 1%;
+    opacity: 0.6;
+    z-index: 60;
+}
 #h1js{
     text-align: center;
     font-size:12vh;
