--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -72,4 +72,36 @@ body{
     opacity:0;
 }
 
+.tunjocuerpo {overflow:auto;
+            position: fixed;
+            top:17vh;
+            width: 100%;
+    
+ 
+}
 
+.tunjoimgv{ 
+    width: 70%;
+    margin-left: 10%;
+    background-color: coral;
+    
+    
+}
+.tunjoimgv img{ 
+    width: 50%;
+    margin-left: 0%;
+    float: left;
+    
+    
+}
+
+
+.textotunjov{ width:100%;
+            width: 47%;
+            float: right;
+            margin-top: 2%;
+            box-shadow: -9px 6px 5px #999;
+            font-size: 3vh;
+            margin-right: 3%;
+    text-align: center;
+    background: linear-gradient(orange, chocolate); 
