--- a/app-muiscas/www/numeros/css/ejerciciosxv.css
+++ b/app-muiscas/www/numeros/css/ejerciciosxv.css
@@ -47,15 +47,18 @@ body{
     top: 50%;
     transform: translate(-50%, -50%);
 }
-.cambio{
+.cambio, .total, .estudiar{
     width: 70%;
     background-color:#3f51b5;
     border: 0.1em solid #3f51b5;
     box-shadow: 1.5vw 0.5vw 2vw #999;
     position: absolute;
-    top:10%;
+    top:25vh;
     left:50%;
     transform: translate(-50%)
+}
+.total, .estudiar{
+    display: none;
 }
 .cambioejer{
     color:white;
@@ -84,5 +87,26 @@ body{
 .imagenp{
     width: 70%;
     margin-left: 8vw;
-    margin-top: 25vh;
+    margin-top: 30vh;
+}
+.resultados{
+    background-color: red;
+    box-shadow: 1.5vw 0.5vw 2vw #999;
+    width: 100%;
+    height: 10vh;
+    position:fixed;
+    top:0;
+    left: 0;
+}
+.res{
+    font-family: "helvetica";
+    font-weight: 900;
+    font-size: 7vw;
+    margin-top: 1vh;
+    margin-left: 1vw;
+}
+.error{
+    position: fixed;
+    top:0;
+    right: 1.5vw;
 }
