--- a/app-muiscas/www/numeros/css/ejerciciosxv.css
+++ b/app-muiscas/www/numeros/css/ejerciciosxv.css
@@ -30,7 +30,7 @@ body{
 .caja{
 	width: 100%;
 	height: 50%;
-    overflow: auto;
+    overflow: hidden;
     position:fixed;
     top:0;
     left:0;
