--- a/app-muiscas/www/numeros/css/numerosxh.css
+++ b/app-muiscas/www/numeros/css/numerosxh.css
@@ -83,7 +83,7 @@ body{
 
 .tunjocuerpo {overflow:auto;
             position: fixed;
-            top:41vh;
+            top:25vh;
             
             width: 100%;
     
@@ -113,10 +113,30 @@ body{
             font-size: 5vh;
             margin-right: 3%;
             background: linear-gradient(orange, chocolate); 
-    
-    
-            
-    
+        
 }
 
+.cabecerainfo{
+    background-color: sienna;
+    box-shadow: 0 2.5vh 1vh -1vh gray;
+    position:fixed;
+    width: 100%;
+    height:18vh;}
 
+
+
+.atrasmenu{
+    width: 7%;
+    position: fixed;
+    left: 1%;
+    z-index: 60;
+    margin-top: 1%;
+}
+
+#titulotunjo{
+    text-align: center;
+    font-size:12vh;
+    font-family: "helvetica";
+    margin-top: 0;
+    color: white;
+}
