--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -105,3 +105,28 @@ body{
             margin-right: 3%;
     text-align: center;
     background: linear-gradient(orange, chocolate); 
+}
+
+.cabecerainfo{
+    background-color: sienna;
+    box-shadow: 0 2.5vh 1vh -1vh gray;
+    position:fixed;
+    width: 100%;
+    height:10vh;}
+
+
+
+.atrasmenu{
+    width: 7%;
+    position: fixed;
+    left: 1%;
+    z-index: 60;
+    margin-top: 1%;
+}
+
+#titulotunjo{
+    text-align: center;
+    font-family: "helvetica";
+    margin-top: 0;
+    color: white;
+}
