--- a/app-muiscas/www/saludos/css/choaxh.css
+++ b/app-muiscas/www/saludos/css/choaxh.css
@@ -1,8 +1,9 @@
 body{
     margin:0;
     padding: 0;
+    overflow:hidden;
 }
-.cabecera { 
+.cabecera {
     width: 100%;
     background-color:#1AB1E1;
     position:fixed;
@@ -33,7 +34,7 @@ body{
     text-align: right;
     margin-right: 2%;
 }
-.cuerpo{
+.cuerpo1{
     width: 62%;
     height: 83%;
     position:absolute;
@@ -56,7 +57,7 @@ body{
 .atardecer{
     position: absolute;
     top:40%;
-    left: 
+    left:
 }
 .amanecer{
     position: absolute;
