completo ejercicio saludos.html

--- a/app-muiscas/www/saludos/css/choaxv.css
+++ b/app-muiscas/www/saludos/css/choaxv.css
@@ -116,14 +116,18 @@ body{
     line-height:1;
 }
 /* Cambio de pantalla */
-.cambio{
+.cambio, .total{
     width: 70%;
     background-color:#3f51b5;
     border: 0.1em solid #3f51b5;
     box-shadow: 1.5vw 0.5vw 2vw #999;
     position: absolute;
     left:50%;
+    top:15vh;
     transform: translate(-50%)
+}
+.total{
+    display: none;
 }
 .cuerpo{
     background-color:#ffffff;
