--- a/app-muiscas/www/saludos/css/choaxh.css
+++ b/app-muiscas/www/saludos/css/choaxh.css
@@ -115,15 +115,18 @@ body{
     line-height:1;
 }
 /* Cambio de pantalla */
-.cambio{
+.cambio, .total{
     width: 60%;
     background-color:#3f51b5;
     border: 0.1em solid #3f51b5;
     box-shadow: 1.5vw 0.5vw 2vw #999;
     position: absolute;
-    top:15vh;
+    top:25vh;
     left:50%;
     transform: translate(-50%)
+}
+.total{
+    display: none;
 }
 .cuerpo{
     background-color:#ffffff;
@@ -185,7 +188,7 @@ body{
     border: 0.1em solid #ffa726;
 }
 
-.enunciado{
+.enunciado,{
     color:white;
     font-family: "helvetica";
     font-size: 5.5vh;
