--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -32,7 +32,7 @@
 }
 .fondoestrofa2{
     background-size: cover;
-    background-image: url(../imagenes/fondo2.jpg);
+    background-image: url(../imagenes/fondo2-1.jpg);
     background-repeat: no-repeat;
 }
 .fondoestrofa3{
@@ -40,13 +40,34 @@
     background-image: url(../imagenes/fondo3.jpg);
     background-repeat: no-repeat;
 }
+.fondoestrofa4{
+    background-size: cover;
+    background-image: url(../imagenes/fondo4.png);
+    background-repeat: no-repeat;
+}
+.fondoestrofa5{
+    background-size: cover;
+    background-image: url(../imagenes/fondo5.png);
+    background-repeat: no-repeat;
+}
+.fondoestrofa6{
+    background-size: cover;
+    background-image: url(../imagenes/fondo6.png);
+    background-repeat: no-repeat;
+}
     
 .fondoestrofa7{
     background-size: cover;
     background-image: url(../imagenes/fondo7.png);
     background-repeat: no-repeat;
-
 }
+
+.fondoestrofa8{
+    background-size: cover;
+    background-image: url(../imagenes/fondo7.png);
+    background-repeat: no-repeat;
+}
+
 .fondoestrofa9{
     background-size: cover;
     background-image: url(../imagenes/fondo9.jpg);
@@ -119,31 +140,7 @@ left:50%;
 top:70%;
 font-size:3vw;
 }
-.fondoestrofa6{
-    background-size: cover;
-    background-image: url(../imagenes/fondo6.png);
-    background-repeat: no-repeat;
-}
-.fondoestrofa7{
-    background-size: cover;
-    background-image: url(../imagenes/fondo7.png);
-    background-repeat: no-repeat;
-}
-.fondoestrofa4{
-    background-size: cover;
-    background-image: url(../imagenes/fondo4.png);
-    background-repeat: no-repeat;
-}
-.fondoestrofa5{
-    background-size: cover;
-    background-image: url(../imagenes/fondo5.png);
-    background-repeat: no-repeat;
-}
-.fondoestrofa9{
-    background-size: cover;
-    background-image: url(../imagenes/fondo%209.png);
-    background-repeat: no-repeat;
-}
+
 .colibrigif{
 width: 90%;   
 z-index: 50;
@@ -188,7 +185,7 @@ transition: all 3s;
 
 .cancion{
     position:fixed;
-    font-size:3vw;
+    font-size:2vw;
     text-align: center;
     color: darkred;
     font-family: cursive;
@@ -299,3 +296,84 @@ top: 55%;
 transition: all 3s;
 z-index: 90;
 }
+
+
+
+.lebiqueronda{
+color:firebrick;
+font-family:sans-serif;
+position:absolute;
+left: 50%;
+top: 9vh;
+transform: translate(-50%);
+font-size: 3vw;
+transition: all 5s;
+    
+}
+.lebiquezoom{
+color:darkorange;
+font-family:sans-serif;
+position: absolute;
+left: 50%;
+top: 10vh;
+transform: translate(-50%);
+font-size: 10vw;
+transition: all 5s;
+margin-top: 0;
+}
+.poeta{
+width: 9%;
+position: absolute;
+right: 15vw;
+bottom: 10vh;   
+}
+
+.ronda{
+width: 10%;
+position: absolute;
+left: 50%;
+transform: translate(-50%);
+bottom: 10vh;
+    
+}
+
+.lebique{
+width: 10.5%;
+position: absolute;
+left: 14vw;
+bottom: 8vh;
+    
+}
+
+.colibriprincipal{
+width: 15%;
+position: absolute;
+right: 70%;
+top: 6vw;
+    
+}
+
+.iconoinicio{
+width: 8%;
+position: absolute;
+right: 2%;
+top: 2vw;
+}
+
+.muysccubun{
+width: 11.5%;
+position: absolute;
+left: 30vw;
+bottom: 36vh;
+}
+
+.español{
+width: 10.5%;
+position: absolute;
+right: 30vw;
+bottom: 35vh;
+}
+
+
+
+
