--- a/app-muiscas/www/numeros/css/ejerciciosxh.css
+++ b/app-muiscas/www/numeros/css/ejerciciosxh.css
@@ -49,8 +49,8 @@ body{
 }
 .cambio, .total, .estudiar{
     width: 70%;
-    background-color:#3f51b5;
-    border: 0.1em solid #3f51b5;
+    background-color:red;
+    border: 0.1em solid red;
     box-shadow: 1.5vw 0.5vw 2vw #999;
     position: absolute;
     top:25vh;
@@ -69,14 +69,14 @@ body{
     line-height: 0;
 }
 .enunciado{
-    color:white;
+    color:black;
     font-family: "helvetica";
     font-size: 5.5vh;
     margin:4%;
 }
 .opciones{
     width:44%;
-    color:white;
+    color:black;
     font-family: "helvetica";
     text-decoration: none;
     font-size: 6vh;
