haciendo cambios locos de adriana

--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -432,3 +432,7 @@ z-index: 90;
     z-index: 89;
     width: 55%;
 }
+
+.todoslosanimales{width: 100%;}
+.todoslosanimales img {width: 20%;
+                        margin-top: 30%;}
