--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -229,6 +229,7 @@ z-index: 90;
     position: absolute;
     left: 25%;
     bottom: -10%;
+    z-index: 90;
 }
 .colibri2{
     width: 7%;
@@ -291,20 +292,27 @@ z-index: 90;
     z-index: 89;
     width: 55%;
 }
-.buho1{
-    width: 27%;
+.arbol{
+    width: 50%;
+    top: 10vw;
+    position: absolute;
+    z-index: 90;
 }
-.inicio{
+.buho1{
+    width: 25%;
+    right: 19vw;
+    z-index: 90;
+}
+.iniciobuho{
     position:fixed;
-    left: 50%;
+    right: 10%;
     top: 3%;
     z-index: 90;
 }
-.final{
+.finalbuho{
     position:fixed;
-
-    left:39%;
-    top: 55%;
+    right:15%;
+    top: 5%;
     transition: all 3s;
     z-index: 90;
 }
@@ -412,9 +420,9 @@ z-index: 90;
     transition: all 3s;
     z-index: 90;   
 }
-.serpiente{
-    width: 48%;
-    
+.serpiente1{
+    width: 80%;
+    z-index: 90;
 }
 .inicios{
     position:absolute;
@@ -478,6 +486,4 @@ h1{color: chocolate;
         
 
 }
-
-
 
