--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -45,3 +45,19 @@ body{
 .textoicono{
     text-align:center;
 }
+
+/*desde aqui css de seccion informacion*/
+
+.iconoinf{width: 100%;}
+
+.subtitulo{width: 100%;
+margin-top: 16%;
+text-align: center;
+font-size: 7vh;
+font-family: helvetica;
+
+}
+
+.cuerpoinfo {
+    width: 100%;
+    
