--- a/app-muiscas/www/saludos/css/presentacionxh.css
+++ b/app-muiscas/www/saludos/css/presentacionxh.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     overflow:hidden;
 }
-.cabecera {
+.cabecera{
     width: 100%;
     background-color:#1AB1E1;
     position:fixed;
@@ -15,127 +15,74 @@ body{
     width:5vh;
     height:100%;
     float: left;
-    margin:1vh;
+    margin:1.8% 1% 1% 1%;
 }
 .logopersona{
-    width:7vh;
+    width:8vh;
     float: left;
-    margin:1vh 1% 1% -1%;
+    margin:1.7% 1% 1% -1%;
 }
 .titulo{
     font-family:"helvetica";
     line-height:0;
-    font-size: 6vw;
+    font-size: 5.5vh;
 }
 .subtitulo{
     font-family:"helvetica";
-    font-size: 4vw;
-    line-height:0.1;
+    font-size: 4.5vh;
+    line-height:0;
     text-align: right;
     margin-right: 2%;
 }
-.cuerpo1{
+.get{
+    width: 50%;
+}
+.informacion{
     width: 100%;
-    height: 69%;
-    position:absolute;
-    top:11%;
-}
-.tamano{
-    width:20%;
-    transition:all 2s;
-}
-.zoom{
-    width:30%;
-    transition:all 2s;
-}
-.mediodia{
+    height:90vh;
+    overflow: auto;
     position: absolute;
-    left:50%;
-    transform: translate(-50%);
+    top:9vh;
 }
-.atardecer{
-    position: absolute;
-    top:40%;
-    left:
-}
-.amanecer{
-    position: absolute;
-    top:40%;
-    right: 1%;
-}
-.medianoche{
-    position: absolute;
-    top: 75%;
-    left:50%;
-    transform: translate(-50%);
-}
-.contsaludos{
-    width:95%;
-    height: 15%;
-    border: solid 1vh black;
+.cuerpo{
+    width: 100%;
+    height: 89.8%;
     overflow:auto;
     position:absolute;
-    bottom:1%;
-    left:50%;
-    transform: translate(-50%);
+    top:10vh;
+    left:0%;
 }
-.normal {
-    width:100%;
-    border: 1px solid #000;
+#p0{
+    display: none;
 }
-.normal th, .normal td {
-    font-size: 7vw;
-    border: 0.7vw solid #000;
-    width:100%;
+#p1{
+    display: none;
 }
-.explicacion{
-    width:50%;
-    height:30%;
-    border: 0.7vw solid #000;
-    border-radius: 150vw 150vw;
-    overflow:auto;
-    position:absolute;
-    top:31vh;
-    left:50%;
-    transform: translate(-50%);
-    z-index:80;
+#p2{
+    display: none;
 }
-.saludo{
-    color:red;
-    font-size:7vw;
-    font-family:"helvetica";
-    text-align:center;
-    margin:10%;
-    line-height:0.9;
+#p3{
+    display: none;
 }
-.textoexplicacion{
-    font-size:4vw;
-    font-family:"helvetica";
-    text-align:center;
-    margin:2%;
-    line-height:1;
+#p4{
+    display: none;
+}
+#p5{
+    display: none;
 }
 /* Cambio de pantalla */
 .cambio, .total{
-    width: 70%;
+    width: 60%;
     background-color:#3f51b5;
     border: 0.1em solid #3f51b5;
     box-shadow: 1.5vw 0.5vw 2vw #999;
     position: absolute;
+    top:25vh;
     left:50%;
-    top:15vh;
     transform: translate(-50%)
 }
 .total{
     display: none;
-}
-.cuerpo{
-    background-color:#ffffff;
-    width: 100%;
-    height:100%;
-    overflow:hidden;
-    position:absolute;
-    z-index:80;
 }
 .ejercicio{
     width:100%;
@@ -176,8 +123,8 @@ body{
 }
 .texto{
     font-family: "helvetica";
-    font-size:5vw;
-    width:100%;
+    font-size:5vh;
+    width:99%;
     color:#fffff;
 }
 .noseve{
@@ -189,20 +136,24 @@ body{
     border: 0.1em solid #ffa726;
 }
 
-.enunciado{
+.enunciado,{
     color:white;
     font-family: "helvetica";
-    font-size: 5.5vw;
+    font-size: 5.5vh;
     margin:4%;
 }
 .opciones{
     width:44%;
     color:white;
     font-family: "helvetica";
-    font-size: 6vw;
+    font-size: 6vh;
     font-weight: 800;
     float:left;
     margin: 3%;
+}
+.negro{
+    color: black;
+    margin-left: 25vw; 
 }
 .subministrar{
     border-top: 1vw solid #9e9e9e;
@@ -216,7 +167,7 @@ body{
 }
 .inputexto{
     background-color: #f5f5f5;
-    font-size: 5vw;
+    font-size: 4.5vh;
     display:inline-flex;
     border:none;
     border-bottom: 1vw solid #9e9e9e;
@@ -225,7 +176,7 @@ body{
 }
 .enter{
     display:inline-flex;
-    font-size:9vw;
+    font-size:8vh;
     font-weight: 900;
     margin:0% 1% 0% 1%;
 }
