creditos nombre, optimizacion de imagene

--- a/app-muiscas/www/css/indexh.css
+++ b/app-muiscas/www/css/indexh.css
@@ -79,3 +79,10 @@ float: right;
 .logo{width:5%;
     float: left;
     margin:1.5%;}
+
+
+
+.creditos{text-align: center;
+        font-size: 8vh;
+        font-family: helvetica;
+}
