--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -76,3 +76,10 @@ font-family: helvetica;
 .cuerpoinfo {
     width: 100%;
 }
+
+
+
+.creditos{text-align: center;
+        font-size: 4vh;
+        font-family: helvetica;
+}
